fix(upgrade): hide non-mobile images on mobile
- Remove desktop and tablet images from mobile viewports

--- a/styles/style.css
+++ b/styles/style.css
@@ -300,6 +300,11 @@
   width: 100%;
 }
 
+.upgrade__photo-desktop,
+.upgrade__photo-tablet {
+  display: none;
+}
+
 /* UPGRADABLE */
 .upgrade-blk {
   width: 100%;
